Area header text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="event_date_yesterday">Yesterday</string>
     <string name="event_date_forward_text"><![CDATA[>]]></string>
     <string name="event_date_back_text"><![CDATA[<]]></string>
+    <string name="areaViewBackButton">Back</string>
 </resources>
