--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -367,6 +367,7 @@
     <string name="swollen_tongue">Swollen Tongue</string>
     <string name="swollen_tonsils">Swollen Tonsils</string>
     <string name="tachycardia">Tachycardia</string>
+    <string name="temperature">Temperature</string>
     <string name="thirst">Thirst</string>
     <string name="throat_cancer_symptoms_and_signs">Throat Cancer Symptoms and Signs</string>
     <string name="thrush_oral_candidiasis_symptoms_and_signs">Thrush (Oral Candidiasis) Symptoms and Signs</string>
