Blood pressure + eye sight

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,6 +140,7 @@
     <string name="excessive_sweating">Excessive Sweating</string>
     <string name="eye_discharge">Eye Discharge</string>
     <string name="eye_floaters">Eye Floaters</string>
+    <string name="eye_sight">Eye Sight</string>
     <string name="eye_twitch">Eye Twitch</string>
     <string name="eyestrain_symptoms_and_signs">Asthenopia (Eyestrain Symptoms and Signs)</string>
     <string name="fainting">Fainting</string>
