--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -411,4 +411,5 @@
     <string name="white_tongue">White Tongue</string>
     <string name="yawning">Yawning</string>
     <string name="zika_virus_infection_symptoms_and_signs">Zika Virus Infection Symptoms and Signs</string>
+    <string name="action_export">Export</string>
 </resources>
