History chart grouping

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -364,7 +364,7 @@
     <string name="swollen_joints">Swollen Joints</string>
     <string name="swollen_knee">Swollen Knee</string>
     <string name="swollen_lip">Swollen Lip</string>
-    <string name="swollen_lymph_nodes">Swollen Lymph Nodes</string>
+    <string name="swollen_lymph_nodes">Swollen Lymph</string>
     <string name="swollen_testicles">Swollen Testicles</string>
     <string name="swollen_tongue">Swollen Tongue</string>
     <string name="swollen_tonsils">Swollen Tonsils</string>
